<resources>
    <string name="app_name">NUMAD22FA_Team49_Project</string>
    <string name="app_title">Store Hunt</string>
    <string name="app_title_without_spaces">StoreHunt</string>
    <string name="app_caption">Discover Small Businesses</string>
    <string name="name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="street_hint">Street</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="country_hint">Country</string>
    <string name="zip_hint">Zipcode</string>
    <string name="re_password_hint">Confirm Password</string>
    <string name="signup_cta">Create Account</string>
    <string name="login_from_signup">Existing User? Login</string>
    <string name="login_as_seller">Are you a seller? Login as seller</string>
    <string name="login_cta">Login</string>
    <string name="signup_from_login">New User?  SignUp</string>
    <string name="seller_signup_from_login">New Seller?  SignUp</string>
    <string name="checkout_cta">Checkout</string>
    <string name="select_category">Select category</string>
    <string name="click_to_add_products">Click + to add products</string>
    <string name="placing_order">Placing order</string>
    <string name="successfully_placed_order">Your order is successfully placed</string>

    <!-- ORDER DETAILS   -->
    <string name="order_details">Order Details</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="username">User Name</string>
    <string name="greeting">Hi</string>
    <string name="view_all">View All</string>
    <string name="your_products">Your Products:</string>
    <string name="revenue">Revenue :</string>
    <string name="new_orders">New Orders</string>
</resources>