<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SellerLoginActivity"
    android:id="@+id/for_keyboard_seller">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textColor="#603a91"
                android:textSize="35sp"
                android:textStyle="bold"
                android:gravity="center"

                android:layout_marginTop="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login and sell more!"
                android:textColor="#603a91"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="10dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/email_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seller_login_email"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"

                android:hint="@string/password_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seller_login_password"

                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/seller_login_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#04031C"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                style="@android:style/Widget.Button"
                android:background="@drawable/button_login_background"
                android:onClick="onClick"
                android:foreground="@drawable/ripple_new_effect"
                android:text="@string/login_cta"/>

            <TextView
                android:id="@+id/seller_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:textColor="#603a91"
                android:foreground="@drawable/ripple_new_effect"
                android:text="@string/seller_signup_from_login"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>